[package]
name = "genpdf"
version = "0.1.0"
authors = ["kimotu4632uz <kimotu.phone@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["staticlib"]

[dependencies]
libc = "0.2.80"
anyhow = "1.0.34"
itertools = "0.9.0"

lopdf = {version = "0.26.0", features = ["chrono_time"] }
image = "0.23.12"
deflate = "0.8.2"
chrono = "0.4.9"
